--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "browser-sync": "^2.18.13",
+    "browser-sync": "^2.23.5",
     "run-script-os": "^1.0.2"
+  },
+  "dependencies": {
+    "react": "^16.2.0"
   }
 }
